syntax = "proto3";

option go_package = "flame/pkg/pb";

import "google/protobuf/empty.proto";

service Account{
  rpc Register(RegisterReq) returns (RegisterRes);
  rpc Login(LoginReq) returns (LoginRes);
  rpc GetTokens(GetTokensReq) returns (GetTokensRes);
  rpc UpdateProfile(UpdateProfileReq) returns (UpdateProfileRes);
  rpc UpdatePreferences(UpdatePreferencesReq) returns(google.protobuf.Empty);
  rpc GetProfile(GetProfileReq) returns (GetProfileRes);
  rpc UploadPhoto(UploadPhotoReq) returns (UploadPhotoRes);
  rpc DeletePhoto(DeletePhotoReq) returns (DeletePhotoRes);
  rpc UpdateLocation(UpdateLocationReq) returns (UpdateLocationRes);
}

message UserProfile {
  int64 Id = 1 [json_name = "id"];
  string Name = 2 [json_name = "name"];
  optional string BirthDate = 3 [json_name = "birth_date"];
  optional string City = 4 [json_name = "city"];
  optional string Bio = 5 [json_name = "bio"];
  optional string Gender = 6 [json_name = "gender"];
  optional string Location = 7 [json_name="location"];
  repeated UserPhoto photos = 8 [json_name = "photos"];
}
message UserPhoto {
  int64 Id = 1 [json_name = "id"];
  optional string UploadedAt = 2 [json_name = "uploaded_at"];
  optional int64 UserId = 3[json_name = "user_id"];
  string PhotoUrl = 4[json_name = "photo_url"];
  optional bool IsMain = 5[json_name = "is_main"];
}

message RegisterReq{
  string Email = 1;
  string Password = 2;
  string Name = 3;
  string Location = 4;
}
message RegisterRes{
  string AccessToken = 1 [json_name = "access_token"];
  string RefreshToken = 2;
}
message LoginReq{
  string Email = 1;
  string Password = 2;
  string Location = 4;
}
message LoginRes{
  string AccessToken = 1 [json_name = "access_token"];
  string RefreshToken = 2 [json_name = "refresh_token"];
}
message GetTokensReq{
  int64 Id = 1;
}
message GetTokensRes{
  string AccessToken = 1 [json_name = "access_token"];
  string RefreshToken = 2 [json_name = "refresh_token"];
}

message UpdateProfileReq{
  int64 Id = 1;
  optional string Name = 2;
  optional string BirthDate = 3;
  optional string City = 4;
  optional string Bio = 5;
  optional string Gender = 6;
}

message UpdateProfileRes{
}

message GetProfileReq{
  int64 Id = 1;
}
message GetProfileRes{
  UserProfile profile = 1 [json_name="profile"];
}
message UploadPhotoReq{
  int64 UserId = 1;
  string LinkPhoto = 2;
}
message UploadPhotoRes{
}

message DeletePhotoReq{
  int64 PhotoId = 1;
  int64 UserId = 2;
}
message DeletePhotoRes{
  string PhotoUrl = 1;
}

message UpdateLocationReq{
  string Location = 1;
  int64 UserId = 2;
}
message UpdateLocationRes{
}

message UpdatePreferencesReq{
  int64 UserId = 1;
  optional int32 distance = 2;
  optional int32 age = 3;
  optional string gender = 4;
  optional string city = 5;
}